test/oscar/compiler/errors/poolActorUndecl.oscar
message testNow()


actor Tester() {

  receive = {
    | testNow() => {
        Println("Error");
      }
    | die() => {
      }
  }
}

def main() => unit = {
  pool<Worker> pool1 = spawn pool<Worker>({}, 3);
  message<testNow>() |>> pool1;
  message<die>() |>> pool1;
}
